<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plickr</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan</string>
    <string name="copy">Copy</string>
    <string name="about_us">About Plickr</string>
    <string name="report_bug">Report Bug</string>
    <string name="title_activity_browser">Plickr Browser</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_about">About Plickr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_report">Report Us</string>
    <string name="title_activity_internet_connection">InternetConnection</string>
    <string name="title_activity_capture">CaptureAct</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="why">If data exceeds recommended length by 162 chars, Some mobile QR readers could fail to decode it.</string>
    <string name="warn_qr_data_exceeds">Data exceeds Recommended length by 162 chars. Some mobile QR readers could fail to decode it.
Do you want to generate QR code anyway?</string>
    <string name="start_plicking_text">START PLICKRING</string>
    <string name="f_login_verify">Verify</string>
    <string name="f_login_otp">Enter OTP Code</string>
    <string name="f_login_register">Register</string>
    <string name="f_login_login">Log in</string>
    <string name="f_feedback_send">Send</string>
    <string name="f_feedback_website">Website</string>
    <string name="f_feedback_email">Email</string>
    <string name="f_feedback_fullname">Full Name</string>
    <string name="f_feedback_text_desc">If you have any suggestions or bug or issue to report. Please contact us below.</string>
    <string name="f_feedback_title">Feedback</string>
    <string name="f_qr_web_url">Enter the URL</string>
    <string name="f_qr_web_shorturl">Short URL</string>
    <string name="f_qr_web_shortbtn">Shorten URL</string>
    <string name="f_qr_web_generatebtn">Generate QR</string>
    <string name="back">Go Back</string>
    <string name="version">VERSION 1.X</string>
    <string name="no_auto_focus">No Auto Focus Feature</string>
    <string name="no_auto_focus_desc">Your device doesn\'t have the camera auto-focus feature. You can scan QR codes but small sized QR codes may fail to recognize by the app</string>

</resources>
