<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:background="#333"
    tools:context="com.growthwell.android.fragment.LoginFragment">

 <LinearLayout
     android:id="@+id/login_circle_layout"
     android:layout_margin="30dp"
     android:padding="30dp"
     android:layout_width="280dp"
     android:layout_height="280dp"
     android:orientation="vertical"
     android:background="@drawable/circle"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
         android:gravity="center"
         android:id="@+id/login_step_1_container">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center">
             <EditText
                 android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:hint="Email ID"
                 android:inputType="textEmailAddress"
                 android:textColor="#444"
                 android:textColorHint="#ccc"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"/>

             <EditText
                 android:layout_width="match_parent"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:textColor="#444"
                 android:layout_marginTop="5dp"
                 android:textColorHint="#ccc"
                 android:layout_marginBottom="5dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
             android:padding="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             >

             <Button
                android:layout_weight="1"
                 android:id="@+id/btn_register_account"
                 android:text="@string/f_login_register"
                 android:textColor="#444"
                 android:background="@drawable/btn_white_green"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 />
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="15dp"/>

             <Button
                 android:layout_weight="1"
                 android:id="@+id/btn_login"
                 android:text="@string/f_login_login"
                 android:textColor="#444"
                 android:background="@drawable/btn_white_green"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:padding="10dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />

         </LinearLayout>

     </LinearLayout>

     <LinearLayout
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/login_step_2_container"
         android:orientation="vertical"
         android:gravity="center"
         >
         <TextView
             android:layout_marginTop="20dp"
             android:textSize="22sp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/f_login_otp"
             android:textColor="#eee"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/btn_email_verify"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/f_login_verify"
             android:layout_marginTop="10dp"
             android:background="@drawable/btn_white_green"/>
     </LinearLayout>
     </LinearLayout>

    <ProgressBar
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_icon_loading"
        android:layout_gravity="center_horizontal"
        android:indeterminate="false" />
</LinearLayout>
